<?xml version="1.0" encoding="utf-8"?>
<resources>
    <item name="valeurCheckBox" type="id">154566</item>
</resources>